I added some text.

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,5 +1,5 @@
 <h1> This is created by Rajdeep Acharya. </h1>
-This is my First Django Project.
+<h2>This is my First Django Project.<br/></h2>
 Small change made.
 <br></br>
 <a href="{% url 'home' %}"> Go back to Homepage</a>
